# mpicheck

./: .gitignore  CMakeLists.txt  README.md  gpucheck.py
