cmake_minimum_required(VERSION 3.15)
include(cmake/prefix.cmake)
project(mpicheck CXX)
include(cmake/postfix.cmake)

find_package(MPI REQUIRED)
find_package(OpenMP)

set(PROGS mpicheck)
foreach(name ${PROGS})
  add_executable(${name} ${name}.cpp)
  target_link_libraries(${name} PUBLIC MPI::MPI_CXX)
  if(OpenMP_CXX_FOUND)
    target_link_libraries(${name} PUBLIC OpenMP::OpenMP_CXX)
  endif()
endforeach()
